@@ -12,12 +12,11 @@ import com.example.passwordgeneration.repository.UserRepository;
 import com.example.passwordgeneration.repository.WebsiteRepository;
 import com.example.passwordgeneration.service.PasswordService;
 import com.example.passwordgeneration.service.UserService;
+import jakarta.transaction.Transactional;
 import java.util.ConcurrentModificationException;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
-
-import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -117,10 +116,9 @@ public class UserServiceImpl implements UserService {
 
   @Override
   @Transactional
-  public List<UserResponse> createManyUsers(List<UserRequest> userRequests){
+  public List<UserResponse> createManyUsers(List<UserRequest> userRequests) {
     return userRequests.stream()
-            .map(this::createUser)
-            .collect(Collectors.toList());
+            .map(this::createUser).toList();
   }
 
 
